<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Health Care</string>
    <string name="dose">Dose do remédio</string>
    <string name="nomeRemedio">Nome do Medicamento</string>
    <string name="nomeMedico">Nome do médico</string>
    <string name="salvar_agendamento">Salvar o agendamento</string>
    <string name="remover">Remover</string>
    <string name="vezes_ao_dia">Vezes ao dia</string>
    <string name="hor_rio_da_primeira_dose">Horário da primeira dose</string>
    <string name="campoNome">TextView</string>
    <string name="nome_completo">Nome completo</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="contato_paciente">Contato paciente</string>
    <string name="contato_de_emerg_ncia">Contato de Emergência</string>
    <string name="telefone_do_contato_de_emerg_ncia">Telefone do Contato de Emergência</string>
    <string name="telefone_de_contato_do_paciente">Telefone de contato do paciente</string>
    <string name="salvar">Salvar</string>
    <string name="Login">Login</string>
    <string name="txtCadastro">TextView</string>
    <string name="nova_senha">Insira a nova senha</string>
    <string name="confirma_senha">Confirmar a nova senha</string>
    <string-array android:name="horarios" name="frequencia_remedio">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
</resources>
