<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/activity_formulario_agendamento_EditText_nomeRemedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/nomeRemedio"
            android:importantForAutofill="no"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/vezes_ao_dia"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/activity_formulario_agendamento_spinner_frequencia_remedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/nomeRemedio" />

        <EditText
            android:id="@+id/activity_formulario_agendamento_EditText_dose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/dose"
            android:importantForAutofill="no"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/activity_formulario_agendamento_EditText_nomeMedico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/nomeMedico"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/activity_formulario_agendamento_EditText_horaDose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/hor_rio_da_primeira_dose"
            android:inputType="time" />

        <TextView
            android:id="@+id/alarme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" " />

    </LinearLayout>
</ScrollView>