<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".ui.activity.EsqueceuSenhaActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="326dp"
        android:layout_height="150dp"
        android:src="@drawable/dash_health"
        android:transitionName="logo_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Login"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editDataNasc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:onClick="showDatePicker"
            android:clickable="true"
            android:hint="@string/data_de_nascimento"
            android:inputType="date" />

        <EditText
            android:id="@+id/editNovaSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nova_senha"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editConfirmaSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirma_senha"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnAlterarSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#000"
            android:text="Alterar Senha"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btnVoltarLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:text="Lembrou sua senha? Fazer Login !"
            android:textColor="#000" />

    </LinearLayout>
</LinearLayout>