<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/annie_use_your_telescope"
                    android:text="Dados de Acesso"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <EditText
                    android:id="@+id/campoNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/annie_use_your_telescope"
                    android:hint="@string/nome_completo"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/campoDataNascimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/annie_use_your_telescope"
                    android:hint="@string/data_de_nascimento"
                    android:inputType="date" />

                <EditText
                    android:id="@+id/campoTelefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/annie_use_your_telescope"
                    android:hint="@string/telefone_de_contato_do_paciente"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/campoContatoEmergencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/annie_use_your_telescope"
                    android:hint="@string/contato_de_emerg_ncia"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/campoTelefoneEmergencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/annie_use_your_telescope"
                    android:hint="@string/telefone_do_contato_de_emerg_ncia"
                    android:inputType="phone" />

                <Spinner
                    android:id="@+id/campoSexo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/annie_use_your_telescope"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="2dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="2dp"
                    android:spinnerMode="dropdown"
                    tools:visibility="visible" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="23dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/annie_use_your_telescope"
                    android:text="Dados Pessoais"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <EditText
                    android:id="@+id/campoLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/annie_use_your_telescope"
                    android:hint="login"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/campoSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/annie_use_your_telescope"
                    android:hint="Senha secreta"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/btnSalvarUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="salvarUsuario"
                    android:text="@string/salvar" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>